[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
once_cell = "1.19.0"
rand = "0.8.5"
