[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
faer = "0.19.1"
image = { version = "0.24.9", features = [ "png"] } 
log = "0.4.21"
once_cell = "1.19.0"
peroxide = "0.37.4"
rand = "0.8.5"
serde = "1.0.203"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2.15", features = ["js"] }
web-sys = { version = "0.3.69", features = ["Navigator", "Window"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[profile.release]
opt-level = 2 # fast and small wasm

[[bench]]
name = "solve"
harness = false
